--- a/index.html
+++ b/index.html
@@ -227,6 +227,62 @@
                     <p>01:00 PM - Lunch Break</p>
                 </div>
             </div>
+            <div class="event">
+                <img src="day-icon-3.png" alt="Day 3">
+                <div>
+                    <h4>Day 3: Advanced Applications and Future Trends</h4>
+                    <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
+                    <p>11:00 AM - Case Studies: Success Stories</p>
+                    <p>01:00 PM - Closing Ceremony</p>
+                    <!-- Add more schedule items -->
+                </div>
+            </div>
+            <div class="event">
+                <img src="day-icon-4.png" alt="Day 4">
+                <div>
+                    <h4>Day 3: Advanced Applications and Future Trends</h4>
+                    <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
+                    <p>11:00 AM - Case Studies: Success Stories</p>
+                    <p>01:00 PM - Closing Ceremony</p>
+                    <!-- Add more schedule items -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Registration Section -->
+    <section id="registration" class="registration" style="background-color: #f9f9f9;">
+    <div class="container">
+        <div class="section-title">
+            <h3>Register Now</h3>
+            <p>Secure your spot at the Quantum Digital Twin Masterclass.</p>
+        </div>
+        <form action="mailto:daniel.rodrigo-albert@npl.co.uk" method="post" enctype="text/plain">
+            <input type="text" name="fullname" placeholder="Full Name" required>
+            <input type="email" name="email" placeholder="Email Address" required>
+            <input type="text" name="organization" placeholder="Organization">
+            <textarea name="message" rows="4" placeholder="Any special requirements"></textarea>
+            <textarea name="motivation" rows="6" placeholder="Describe your background and motivation for joining the masterclass."></textarea>
+            <button type="submit">Submit Registration</button>
+        </form>
+    </div>
+    </section>
+
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <div class="section-title">
+                <h3>Contact Us</h3>
+                <p>If you have any questions, feel free to reach out.</p>
+            </div>
+            <div class="section-title">
+            <p>Email: <a href="mailto:daniel.rodrigo-albert@npl.co.uk">daniel.rodrigo-albert@npl.co.uk</a></p>
+            <p>Address: National Physical Laboratory, Hampton Road, Teddington, Middlesex TW11 0LW, UK</p>
+            <p>Directions: <a href="https://www.npl.co.uk/find-us">https://www.npl.co.uk/find-us</a></p>
+            <!-- You can also embed a Google Map here if desired -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2488.0545349695!2d-0.3439818117474202!3d51.4204248443359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760b003575f69f%3A0x4c42601b19b67614!2sBushy%20House!5e0!3m2!1sen!2suk!4v1737114114318!5m2!1sen!2suk" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
 
@@ -234,5 +290,6 @@
     <footer>
         <p>&copy; 2025 Quantum Digital Twin Masterclass. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
