--- a/index.html
+++ b/index.html
@@ -175,6 +175,81 @@
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <div class="section-title">
+                <h3>About the Masterclass</h3>
+                <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
+            </div>
+            <p>
+                The Quantum Digital Twin Masterclass aims to bring together specialists in quantum simulation, tensor networks, and quantum materials to explore the 
+                future prospects of large-scale quantum simulators and the development of customized tools for emulating these devices at increasing number of qubits.
+                This event will feature two research-intensive days, bringing leading academics and industry reprepresentatives, to showcase recent advancements in 
+                these fields. The presentations will highlight progress in quantum hardware, software, and methodologies for simulating quantum matter — an area where quantum 
+                computers and simulators are expected to offer advantages. The masterclass will also include two days of lectures tailored for graduate students 
+                and postdocs in quantum technologies and condensed matter physics, providing foundational and advanced insights into these cutting-edge topics. 
+                This unique format combines high-level research discussions with an educational component, reducing the barrier for entering the field
+                and faciliating the exchange of ideas for developing new generations of quantum digital twins.
+            </p>
+            <p>
+                The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
+            </p>
+        </div>
+    </section>
+
+    <!-- Speakers Section -->
+    <section id="lecturers" class="lecturers">
+        <div class="container">
+            <div class="section-title">
+                <h3>Our Lecturers</h3>
+                <p>Learn from leading experts in quantum simulation and tensor network methods.</p>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Prof. Natalia Chepiga (TU Delft, The Netherlands)</h4>
+                    <p><i>Introduction to tensor network methods for condensed matter systems</i></p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Prof. Zlatko Papic (University of Leeds, UK)</h4>
+                    <p><i>Tensor networks for simulating dynamical systems</i></p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Prof. Andrew Green (University College London, UK)</h4>
+                    <p><i>Quantum computing and circuit simulation methods inspired by tensor networks</i></p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>Dr. Lachlan Lindoy (National Physical Laboratory, UK)</h4>
+                    <p><i>Hands-on for tree tensor networks: introducing PyTTN for simulating open quantum qystems</i></p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>[TBD] Prof. Mari Carmen Banuls (TU Munich, Germany)</h4>
+                    <p><i>To be confirmed</i></p>
+                </div>
+            </div>
+            <div class="lecturer">
+                <img src="speaker-icon.png" alt="Lecturer">
+                <div>
+                    <h4>[TBC] Prof. Simone Montangero (University of Padova, Italy)</h4>
+                    <p><i>To be confirmed</i></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Speakers Section -->
     <section id="speakers" class="speakers">
         <div class="container">
