--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum Digital Twin Masterclass</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <style>
         /* Basic Reset */
         * {
@@ -116,6 +117,23 @@
         .schedule .event div {
             text-align: center;
         }
+        /* List of lecturers and schedule events */
+    .lecturer, .event {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+    .lecturer img, .event img {
+        width: 40px;
+        height: 40px;
+        margin-right: 15px;
+        object-fit: contain;
+    }
+    .lecturer div, .event div {
+        text-align: left; /* Align text left for better readability */
+    }
         .registration form {
             max-width: 600px;
             margin: auto;
