--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             padding: 40px 0;
         }
         .container {
+            text-align: center;
             width: 90%;
             max-width: 1200px;
             margin: auto;
