--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
             padding: 40px 0;
         }
         .container {
-            text-align: center;
             width: 90%;
             max-width: 1200px;
             margin: auto;
@@ -116,6 +115,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
+            margin-left: 200px;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
@@ -221,7 +221,16 @@
             </p>
             <p>
                 The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
-            <\p>
+            </p>
+            <p>
+            <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
+            <h4>Venue: The Bushy House, NPL, Tenddington (London area)</h4>
+            <h4>Dinner: to be decided.</h4>
+            </p>
+            
+            <p>
+                The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
+            </p>
         </div>
     </section>
 
