--- a/index.html
+++ b/index.html
@@ -209,10 +209,7 @@
                 <h3>About the Masterclass</h3>
                 <p>Discover the latest advancements in Quantum Digital Twin technology and its applications across various industries.</p>
             </div>
-            <div class="section-title">
-                <h3>&nbsp;</h3>
-            </div>
-            <div class="section-title">
+            <p>&nbsp;</p>
             <p>
                 The Quantum Digital Twin Masterclass aims to bring together specialists in quantum simulation, tensor networks, and quantum materials to explore the 
                 future prospects of large-scale quantum simulators and the development of customized tools for emulating these devices at increasing number of qubits.
@@ -223,18 +220,11 @@
                 This unique format combines high-level research discussions with an educational component, reducing the barrier for entering the field
                 and faciliating the exchange of ideas for developing new generations of quantum digital twins.
             </p>
-            </div>
-            <div class="section-title">
-                <h3>&nbsp;</h3>
-            </div>
-            <div class="section-title">
+            <p>&nbsp;</p>
             <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
             <h4>Venue: The Bushy House, NPL, Tenddington (London area)</h4>
             <h4>Dinner: to be decided.</h4>
-            </div>
-            <div class="section-title">
-                <h3>&nbsp;</h3>
-            </div>
+            <p>&nbsp;</p>
             <p>
                 The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
             </p>
