--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            margin-left: 200px;
+            margin-left: 40%;
         }
         .speakers .speaker img, .schedule .event img {
             text-align: center;
@@ -223,7 +223,7 @@
             <p>&nbsp;</p>
             <h4>Dates and time: 09:00 - 17:00, Tuesday 04 March - Friday 07 March 2025</h4>
             <h4>Venue: The Bushy House, NPL, Tenddington (London area)</h4>
-            <h4>Dinner: to be decided.</h4>
+            <h4>Dinner: to be confirmed.</h4>
             <p>&nbsp;</p>
             <p>
                 The tentative programme for the event is to be finalised. Below we list of lecturers for the masterclass and invited speakers.
