--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
                     <h4>&#8226; Dr. Lucile Savary (Ecole Normale, Lyon, France; to be confirmed)</h4>
                 </div>
             </div>
+            <div class="speaker">
+                <div>
+                    <h4>&#8226; Dr. Francois Jamet (Alice and Bob, France)</h4>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -401,7 +406,7 @@
                     <h4>Day 3: Advanced Applications and Future Trends</h4>
                     <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
                     <p>11:00 AM - Case Studies: Success Stories</p>
-                    <p>01:00 PM - Closing Ceremony</p>
+                    <p>01:00 PM - Lunch Break</p>
                     <!-- Add more schedule items -->
                 </div>
             </div>
@@ -411,7 +416,7 @@
                     <h4>Day 3: Advanced Applications and Future Trends</h4>
                     <p>09:00 AM - Seminar: Integrating AI with Digital Twins</p>
                     <p>11:00 AM - Case Studies: Success Stories</p>
-                    <p>01:00 PM - Closing Ceremony</p>
+                    <p>05:00 PM - Closing Ceremony</p>
                     <!-- Add more schedule items -->
                 </div>
             </div>
